<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.HomeActivity"
    tools:showIn="@layout/activity_home">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:padding="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_logo"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_start"
                android:layout_margin="5dp"
                android:textColor="@color/materialBlue"
                android:background="@color/darkBlue"/>

            <Button
                android:id="@+id/btn_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_stats"
                android:layout_margin="5dp"
                android:textColor="@color/materialBlue"
                android:background="@color/darkBlue"/>

            <Button
                android:id="@+id/btn_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_credits"
                android:layout_margin="5dp"
                android:textColor="@color/materialBlue"
                android:background="@color/darkBlue"/>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_exit"
                android:layout_margin="5dp"
                android:textColor="@color/materialBlue"
                android:background="@color/darkBlue"/>

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
