<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearlayout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:padding="3dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_user"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_driver_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text=""/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/textview_driver_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="10dp"/>

                        <TextView
                            android:id="@+id/textview_driver_age"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="10dp"/>

                        <TextView
                            android:id="@+id/textview_week_number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="10dp"/>



                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="8">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="15dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_up_arrow"/>

                        <TextView
                            android:id="@+id/textview_up_shocks"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="10dp"
                            android:text="12"
                            android:gravity="left"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:padding="2dp"/>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="15dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_down_arrow"/>

                        <TextView
                            android:id="@+id/textview_down_shocks"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="10dp"
                            android:text="12"
                            android:gravity="left"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:padding="2dp"/>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="15dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_left_arrow"/>

                        <TextView
                            android:id="@+id/textview_left_shocks"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="10dp"
                            android:text="12"
                            android:gravity="left"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:padding="2dp"/>


                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="15dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_right_arrow"/>

                        <TextView
                            android:id="@+id/textview_right_shocks"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="10dp"
                            android:text="12"
                            android:gravity="left"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:padding="2dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textview_total_shocks"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/textview_total_shocks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="12"
                        android:textSize="20dp"
                        android:textColor="@color/darkBlue"
                        android:textStyle="bold"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/darkBlue"></LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview_bluetooth"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_bluetooth"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/imageview_excercise_state"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_stoped"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:id="@+id/imageview_up_side"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_shock"
                            android:layout_gravity="center"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/textview_up_side"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                    </FrameLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="10"
                    android:gravity="center">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2">

                        <ImageView
                            android:id="@+id/imageview_left_side"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_shock"
                            android:layout_gravity="center"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/textview_left_side"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                    </FrameLayout>


                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:layout_weight="6"
                        android:src="@drawable/ic_car_schema"/>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2">

                        <ImageView
                            android:id="@+id/imageview_right_side"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_shock"
                            android:layout_gravity="center"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/textview_right_side"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/imageview_down_side"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_shock"
                            android:layout_gravity="center"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/textview_down_side"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_start_excercise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/btn_start"
                android:textColor="@color/white"
                android:background="@color/materialGreen"
                android:enabled="false"/>

            <Button
                android:id="@+id/button_stop_excercise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/btn_stop"
                android:textColor="@color/white"
                android:background="@color/materialRed"
                android:enabled="false"/>


        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>